# RAG-Hybrid

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml
api/: main.py  schemas.py
docs/: README.md  SKILLS.md  agents.md
eval/: runner.py
eval/golden/: golden.json
generation/: citation.py  generator.py  schemas.py
ingest/: chunker.py  embedder.py  indexer.py  loader.py  model.py  schemas.py
retrieval/: dense.py  fusion.py  reranker.py  schemas.py  sparse.py
scripts/: ingest_all_strategies.py  ingest_docs.py
tests/: test_api.py  test_chunker.py  test_citation.py  test_dense.py  test_embedder.py  test_fusion.py  test_generator.py  test_indexer.py  test_loader.py  test_reranker.py  test_sparse.py
