[project]
name = "rag-hybrid"
version = "0.1.0"
description = "Production-grade RAG system with hybrid search (dense vector + sparse BM25)"
authors = [{name = "Prajwal Amoghavarsh", email = "prajwalvarsh55@gmail.com"}]
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "rank_bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "ragas>=0.1.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest", "retrieval", "generation", "eval", "api", "tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
